# Shared

./: claude_review_01042026.md
Codeium/: __tmp_import.py
Codeium/.claude/: settings.local.json
Codeium/timekeeper_analysis_agent/: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  main.py  requirements.txt
Joker/: app.py
Joker/adk/: agent.py  debug_agent.py  tool.py
Joker_2/: .gitignore  app.py  requirements.txt
Joker_2/disco_joker/: agent.py  tool.py
LexSpend/: .gitignore  QUICKSTART.md  README.md  config.py  lexspend-legal-spend-analysis.plan.md  lexspend_results.db  requirements.txt
LexSpend/data/: sample_legal_spend.csv
LexSpend/lexspend/: __init__.py  agent.py  prompt.py
Overwatch/: .gitignore  README.md  requirements.txt
ViewerIt/: APP_REVIEW_12302025.md  README.md  build_extension.bat  gemini_enhnace_01042026.md  requirements.txt  run.py  start.bat  start_all.ps1  start_backend.ps1  start_frontend.ps1  start_streamlit.ps1  test_rust_integration.py
agent_utis/: .env.example  README.md  agents.py  main.py  prompy.txt  requirements.txt  setup.sh  utils.py
compare_it/: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  REVIEW.md  report.html  results.csv
compare_it/src/: compare_structured.rs  compare_text.rs  export.rs  fingerprint.rs  index.rs  main.rs  match_files.rs  report.rs  types.rs
legal_spend/: .gitignore  GEMINI.md  quick_start.py  requirements.txt
legal_spend_main/: .gitignore  QUICKSTART.md  README.md  __init__.py  agent.py  config.py  requirements.txt
regex/: 1.sql
(+183 files in other folders)
