[package]
name = "compare_it"
version = "0.1.0"
edition = "2021"
description = "High-performance file comparison tool with text and structured modes"
authors = ["CompareIt Team"]

[[bin]]
name = "CompareIt"
path = "src/main.rs"

[dependencies]
# CLI and error handling
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# High-performance processing
similar = "2.4"           # Fast diff engine (Myers algorithm)
rayon = "1.8"             # Parallel processing
walkdir = "2.4"           # Efficient directory traversal
blake3 = "1.5"            # Fast cryptographic hashing

# String similarity
strsim = "0.10"           # Jaro-Winkler and other string metrics

# CSV/TSV parsing
csv = "1.3"

# Serialization and export
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal output
comfy-table = "7.1"       # Beautiful terminal tables
indicatif = "0.17"        # Progress bars
console = "0.15"          # Terminal styling

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
